<resources>
    <string name="app_name">BAWP</string>
    <string name="action_settings">Settings</string>
    <string name="show_as_grid">Show as grid</string>
    <string name="show_as_list">Show as list</string>
    <string name="login_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_title_button">Login</string>
    <string name="create_act_text">Create Account</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="create_act_button_title">Create Account</string>
    <string name="title_activity_details">DetailsActivity</string>
</resources>
