<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightGray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:padding="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <EditText
                android:id="@+id/createActFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/firstname"/>

            <EditText
                android:id="@+id/createActLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/createActFirstName"
                android:layout_margin="10dp"
                android:hint="@string/lastname"/>

            <EditText
                android:id="@+id/createActUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/createActLastName"
                android:layout_margin="10dp"
                android:hint="@string/login_hint"/>

            <EditText
                android:id="@+id/createActPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/createActUsername"
                android:layout_margin="10dp"
                android:hint="@string/password_hint"/>

            <Button
                android:id="@+id/createActButton"
                android:layout_below="@id/createActPassword"
                android:layout_margin="10dp"
                android:text="@string/create_act_button_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>



        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>